# students2

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.local.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 3d88a3c8c16f_change_results_tabel.py  52bd34446076_create_user_and_result_tables.py  6d69f78ca0d4_remove_token_field.py  baa06b277290_add_level_filed_for_results.py
future_development/: app.js  game.html  index.html  profile.html  rating.html  signin.html  signup.html  style.css
src/: bootstrap.py  config.py  exceptions.py  logger.py
src/api/: webserver.py
src/api/adapters/: __init__.py  db_adapter.py
src/api/auth/: auth.py  routes.py  schemas.py
src/api/result/: routes.py  shemas.py
src/db/: storage.py
src/db/models/: __init__.py  result.py  user.py
src/db/repositories/: __init__.py  result.py  user.py
src/domain/: models.py
src/entrypoints/: main.py
src/frontend/: package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.css  App.js  Login.js  Registration.js  index.js
src/frontend/src/components/: MahjongSelection.js  YouLose.jsx  mahjong-electricCars-easy-1.js  mahjong-electricCars-easy-2.js  mahjong-electricCars-easy-3.js  mahjong-electricCars-hard-1.js  mahjong-electricCars-hard-2.js  mahjong-electricCars-hard-3.js  mahjong-electricCars-medium-1.js  mahjong-electricCars-medium-2.js  mahjong-electricCars-medium-3.js  mahjong-randomCars-easy-1.js  mahjong-randomCars-easy-2.js  (+17 more)
src/servises/: authentication.py  result_service.py  uow.py  user_service.py
