[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Perchinka", "hlopushkaa"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic = "^2.10.1"
asyncpg = "^0.30.0"
pyjwt = "^2.10.1"
ruff = "^0.8.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[virtualenvs]
in-project = true

[tool.ruff]
lint.extend-select = ["I"]
